ajustando cambios y agregando anotacion para auditoria